# ocaml-jp-feed

./: dune-project  feeds.json  feeds.yaml  poll.py
.github/workflows/: poll.yml
dune.lock/: async.v0.17.0.pkg  async_kernel.v0.17.0.pkg  async_log.v0.17.0.pkg  async_rpc_kernel.v0.17.0.pkg  async_ssl.v0.17.0-1.pkg  async_ssl.v0.17.0-2.pkg  async_unix.v0.17.0.pkg  cohttp-async.6.2.1.pkg  cohttp.6.2.1.pkg  conduit-async.8.0.0.pkg  conduit.8.0.0.pkg  conf-libffi.2.0.0.pkg  core_unix.v0.17.1.pkg  ctypes-foreign.0.24.0.pkg  fmt.0.11.0.pkg  http.6.2.1.pkg  ipaddr-sexp.5.6.2.pkg  jsonaf.v0.17.0.pkg  lock.dune  logs.0.10.0.pkg  openrouter_api.0.0.1.pkg  openrouter_api.0.1.0.pkg  openrouter_api.dev.pkg  ppx_jsonaf_conv.v0.17.1.pkg  ppx_typed_fields.v0.17.1.pkg  protocol_version_header.v0.17.0.pkg  spawn.v0.17.0.pkg  syndic.1.8.0.pkg  textutils.v0.17.0.pkg  uutf.1.0.4.pkg
lib/: classifier.ml  classifier.mli  discord.ml  discord.mli  dune  entry.ml  entry.mli  feed_config.ml  feed_config.mli  feed_fetch.ml  feed_fetch.mli  feed_state.ml  feed_state.mli  poller.ml  poller.mli
state/: blog.anqou.net.json  lilyum-ensemble.json  m3tech.blog.json  ocaml-weekly-news.json  qiita-ocaml.json  zenn-ocaml.json
test/: dune  feed_fetch_test.ml
